# llmstxt_architect

./: README.md  pyproject.toml
llmstxt_architect/: __init__.py  cli.py  extractor.py  loader.py  main.py  summarizer.py
tests/: cleanup.py  test_all.py  test_api.py  test_cli.py  test_script_claude.py  test_uvx_claude.py  test_uvx_ollama.py
